[package]
authors = ["Jeff McBride <mcbridejc@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "pd-driver"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "*"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.3"
generic-array = "0.13"
heapless = "0.5"
#panic-semihosting = "*"
#panic-halt = "*"
panic-itm = "*"
typenum = "1.11"
pd-driver-messages = {path = "../pd-driver-messages"}

[dependencies.embedded-hal]
version = "*"
features = ["unproven"]

[dependencies.stm32f4]
version = "*"
features = ["stm32f411", "rt"]

[dependencies.stm32f4xx-hal]
version = "*"
default-features = false
features = ["stm32f411"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "pd-driver"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
